src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Description__c</fullName>
        <label>Account Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Local__c</fullName>
        <label>Account Name (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Under Deregistration</fullName>
                </value>
                <value>
                    <fullName>Under Liquidation</fullName>
                </value>
                <value>
                    <fullName>Under Repossession</fullName>
                </value>
                <value>
                    <fullName>Struck off</fullName>
                </value>
                <value>
                    <fullName>Deregistered</fullName>
                </value>
                <value>
                    <fullName>Amalgamated</fullName>
                </value>
                <value>
                    <fullName>Under Migration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Kiosk</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                    <isActive>false</isActive>
                    <label>Analyst</label>
                </value>
                <value>
                    <fullName>Broker</fullName>
                    <isActive>false</isActive>
                    <label>Broker</label>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                    <isActive>false</isActive>
                    <label>Business Partner</label>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                    <isActive>false</isActive>
                    <label>Competitor</label>
                </value>
                <value>
                    <fullName>Customer</fullName>
                    <isActive>false</isActive>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                    <isActive>false</isActive>
                    <label>Integrator</label>
                </value>
                <value>
                    <fullName>Investor</fullName>
                    <isActive>false</isActive>
                    <label>Investor</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                    <isActive>false</isActive>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Press</fullName>
                    <isActive>false</isActive>
                    <label>Press</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Arabic__c</fullName>
        <label>Address (Arabic)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Approval_Date__c</fullName>
        <label>Application Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Approval_Request_Date__c</fullName>
        <label>Application Approval Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Approval_Status__c</fullName>
        <label>Application Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Approver_Comment__c</fullName>
        <label>Application Approver Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Info_Requested_Date__c</fullName>
        <label>Application Info Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Request_Date_Approval_Date__c</fullName>
        <label>Application Request Date Approval Date</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Submitter_Comment__c</fullName>
        <label>Application Submitter Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Grauntee_Certificate__c</fullName>
        <label>Bank Grauntee Certificate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_P_O_Box__c</fullName>
        <label>Billing P.O Box</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Center ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Keyword__c</fullName>
        <label>Business Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Approver_Comment__c</fullName>
        <label>Business Plan Approver Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Info_Requested_Date__c</fullName>
        <label>Business Plan Info Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Request_Date_Approval_Date__c</fullName>
        <label>Business Plan Request Date-Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Submitter_Comment__c</fullName>
        <label>Business Plan Submitter Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Sub_Category_Name__c</fullName>
        <label>Business Unit Sub Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Sanctions__c</fullName>
        <label>CA Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COA_Amended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COA Amended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COA_Amendment_Date__c</fullName>
        <label>COA Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COA_Issue_Date__c</fullName>
        <label>COA Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Program_Level_Name__c</fullName>
        <label>Channel Program Level Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Program_Name__c</fullName>
        <label>Channel Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Arabic__c</fullName>
        <label>City (Arabic)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Page_Indicator__c</fullName>
        <description>Custom field used to track of current page for customer registration in community.</description>
        <label>Community Page Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_BIO__c</fullName>
        <label>Company BIO</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company_Classification__c</fullName>
        <label>Company Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Descriptions__c</fullName>
        <label>Company Descriptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Status__c</fullName>
        <label>Company Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Incorporation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Incorporation</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts (Country of Incorporation)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_License_Issue_Date__c</fullName>
        <label>Current License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Deposit_Opening__c</fullName>
        <label>Customer Deposit (Opening)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Deposit_Refund_InProcess__c</fullName>
        <label>Customer Deposit Refund(InProcess)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Deposit_Refund__c</fullName>
        <label>Customer Deposit(Refund)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Deposit_Topped_up__c</fullName>
        <label>Customer Deposit (Topped up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Page_Indicator__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For customer onboarding, used to track of number of steps completed by customer.</description>
        <label>Customer Page Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Portal_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DED_Activity__c</fullName>
        <label>DED Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DED_Approval_Date__c</fullName>
        <label>DED Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DED_Approval_Status__c</fullName>
        <label>DED Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DED_Initial_Approval_Number__c</fullName>
        <label>DED Initial Approval Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DED_Licence__c</fullName>
        <label>DED Licence #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DED_NOC_Service__c</fullName>
        <label>DED NOC Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DED_Provisional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DED Provisional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DED_Trade_License_number__c</fullName>
        <label>DED Trade License number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Incorporation_Parent_Company__c</fullName>
        <description>Parent company date of incorporation, displayed on customer on boarding form,</description>
        <label>Date of Incorporation - Parent Company</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Incorporation__c</fullName>
        <label>Date of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Building__c</fullName>
        <label>Delivery Building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zone__c</fullName>
        <label>Delivery Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deregistration_Date__c</fullName>
        <label>Deregistration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Checklist_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Checklist Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Expiry_Date__c</fullName>
        <label>EC Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EC_Issue_Date__c</fullName>
        <label>EC Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <label>EC#</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ejari_Tenant_Code__c</fullName>
        <label>Ejari Tenant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIN_Sanctions__c</fullName>
        <label>FIN Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Account_Number__c</fullName>
        <label>Finance Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freelancer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freelancer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSO_Sanctions__c</fullName>
        <label>GSO Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSE_Approval_Status__c</fullName>
        <label>HSE Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSE_Approved_Date__c</fullName>
        <label>HSE Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSE_Request_Date__c</fullName>
        <label>HSE Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRM_Sanctions__c</fullName>
        <label>IRM Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sectors__c</fullName>
        <label>Industry Sectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instagram_URL__c</fullName>
        <label>Instagram URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Investor_Type__c</fullName>
        <label>Investor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Renewal_Date__c</fullName>
        <label>Last Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Down_size_date__c</fullName>
        <label>Lease Down size date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lease_Sanctions__c</fullName>
        <label>Lease Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leasing_Category__c</fullName>
        <label>Leasing Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Document_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Document Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Framework__c</fullName>
        <label>Legal Framework</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Branch of a Foreign Company</fullName>
                </value>
                <value>
                    <fullName>Branch of a UAE Company</fullName>
                </value>
                <value>
                    <fullName>Branch of a UAE Establishment</fullName>
                </value>
                <value>
                    <fullName>Freelancer</fullName>
                </value>
                <value>
                    <fullName>Free Zone Limited Liability company</fullName>
                </value>
                <value>
                    <fullName>Limited Liability company</fullName>
                </value>
                <value>
                    <fullName>Decree Company</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Address__c</fullName>
        <label>License Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>License_Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Expiry_Date__c</fullName>
        <label>License Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_First_Issue_Date__c</fullName>
        <label>License First Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Withdrawn</fullName>
                </value>
                <value>
                    <fullName>License Under Process</fullName>
                </value>
                <value>
                    <fullName>License Approved</fullName>
                </value>
                <value>
                    <fullName>License Issued</fullName>
                </value>
                <value>
                    <fullName>License Under Cancellation</fullName>
                </value>
                <value>
                    <fullName>License Cancelled</fullName>
                </value>
                <value>
                    <fullName>License Not Required</fullName>
                </value>
                <value>
                    <fullName>Company Under Repossession</fullName>
                </value>
                <value>
                    <fullName>License Under Renewal</fullName>
                </value>
                <value>
                    <fullName>License Under Suspension</fullName>
                </value>
                <value>
                    <fullName>License Renewal on Hold</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DED</fullName>
                </value>
                <value>
                    <fullName>DDA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>TECOM</fullName>
                    <isActive>false</isActive>
                    <label>TECOM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Brand__c</fullName>
        <label>Location Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Document_ID__c</fullName>
        <label>Logo Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Manager In Charge)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Incharge_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Incharge Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Test_Center__c</fullName>
        <label>Medical Test Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Date__c</fullName>
        <label>NPS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Approval_Request_Date_Approval_Date__c</fullName>
        <label>Name Approval Request Date-Approval Date</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Approval_Request_Number__c</fullName>
        <description>To store Name Approval Request Number for approved request from DDA</description>
        <label>Name Approval Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Approval_Submitter_Comment__c</fullName>
        <label>Name Approval Submitter Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_GCC_Approval_Approved_Date__c</fullName>
        <label>Non GCC Approval Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_GCC_Approval_Requested_Date__c</fullName>
        <label>Non GCC Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_GCC_Approval_Status__c</fullName>
        <label>Non GCC Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORACLE_GOS_PARTY_ID__c</fullName>
        <externalId>true</externalId>
        <label>ORACLE GOS PARTY ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORACLE_PARTY_ID__c</fullName>
        <externalId>true</externalId>
        <label>ORACLE PARTY ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORA_Party_ID__c</fullName>
        <label>ORA Party ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Records_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Records Integration</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>